# cargo-summary

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  output_doc.rs  path.rs  subcommand.rs  summarize.rs  summary.rs  version.rs
src/output_doc/: json.rs  lines.rs  schema.rs  subcommands.rs  text.rs
src/summarize/: build.rs  clippy.rs  test_legacy.rs  test_nextest.rs
