[package]
name = "cargo-summary"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Jonathan Shook <jshook@gmail.com>"]
description = "Concise cargo wrapper with single-line summaries, heartbeats, timeouts, and persistent stdout/stderr capture. Invokable as `cargo summary <subcommand>`."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jshook/cargo-summary"
homepage = "https://github.com/jshook/cargo-summary"
keywords = ["cargo", "cargo-subcommand", "ci", "build-tools"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-summary"
path = "src/bin/cargo-summary.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
